# langchain-playbook

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
1_chat_models/: 1_basic.py  2_basic_conversation.py  3_alternatives.py  4_realtime_chat.py  5_firestore_realtime_chat.py
3_chains/: 1_basic.py  2_runnables.py  5_runnable_branch.py
4_rag/: 1a_build_vectorstore.py  1b_query_vectorstore.py  2a_build_vectorstore_metadata.py  2b_query_vectorstore_metadata.py  3_text_splitting_techniques.py  4_embedding_techniques.py  5_retrievers.py  6_question_llm.py  7_realtime_chat.py  8_web_scraping.py  8_web_scraping_firecrawl.py
4_rag/books/: rockets_missiles_and_spacecraft.txt
5_agent_and_tools/: 1_basic.py
5_agent_and_tools/agents/: 1_react_chat.py  2_react_chat_docstore.py
5_agent_and_tools/tools/: 1_tool_constructor.py  2_tool_decorator.py  3_base_tool.py
chains/: extending_chain.py  runnable_parallel_chains.py  runnables.py
chat_models/: alternatives.py  basic.py  basic_conversation.py  firestore_realtime_chat.py
prompt_templates/: basic.py  realtime_chat.py
utils/: llm_utils.py
