[project]
name = "langchain-playbook"
version = "0.1.0"
description = "A growing collection of LangChain patterns and implementations from @bhancockio's crash course, with documented learnings and extensions"
authors = [
    {name = "https://github.com/maheshus"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "firestore (>=0.0.8,<0.0.9)",
    "langchain-google-firestore (>=0.5.0,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
